# src/routes/authRoutes.js
@@ -21,4 +21,7 @@ router.post('/reset-password', validateResetPassword, validate, authController.r
 
 router.get('/profile', verifyToken, authController.getProfile);
 
+router.put('/users/:id', verifyToken, isAdmin, authController.updateUser);
+router.delete('/users/:id', verifyToken, isAdmin, authController.deleteUser);
+
 module.exports = router;
